--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  margin: 0;
-}
+html, body {margin: 0; height: 100%; overflow: hidden}
 
 .border-text {
   /* text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, */
@@ -60,6 +58,70 @@ body {
 
 .big-card > * {
   z-index: 2;
+}
+
+
+.full-square {
+  margin: auto;
+  width: 100vmin;
+  height: 100vmin;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-size: 100% 100%;
+  box-shadow: inset 25vmin 0 25vmin white, inset -25vmin 0 25vmin white, inset 0 25vmin 25vmin white, inset 0 -25vmin 25vmin white;
+}
+
+.spell-letters {
+
+}
+
+.bank {
+  display: flex;
+  gap: 0.5vmin;
+  font-family: monospace;
+  font-size: 5vmin;
+  max-width: 100%;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.bank.selectable {
+  font-size: 5vmin;
+  justify-content: center;
+}
+
+.bank > span {
+  width: 8vmin;
+  height: 8vmin;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: thin solid black;
+  border-radius: 0.5vmin;
+  cursor: default;
+}
+
+.bank.selectable > span {
+  width: min(8vh, 12vmin);
+  height: min(8vh, 12vmin);
+}
+
+.bank > span.empty {
+  border-color: #0002;
+}
+
+.bank > span.fail {
+  background-color: #f774;
+}
+
+.bank > span.done {
+  background-color: #0001;
+  border-color: transparent;
+}
+
+.bank.selectable > span {
+  cursor: pointer;
 }
 
 .card {
