--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,44 @@
 
 html, body {margin: 0; height: 100%; overflow: hidden}
 
+.select-language {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.select-language h2 {
+  font-size: 2rem;
+}
+
+
+.language-button {
+  background-size: 100% 100%;
+  padding: 1.2rem;
+  box-shadow: inset 1.5rem 0 1.5rem white, inset -1.5rem 0 1.5rem white, inset 0 1.5rem 1.5rem white, inset 0 -1.5rem 1.5rem white;
+  font-size: 2rem;
+  max-width: 100%;
+  width: 50vh;
+}
+
+.language-button > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.language-button > div > img {
+  height: 2rem;
+  border: thin solid #eeee;
+}
+
 .border-text {
   /* text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, */
   /*              1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff; */
