--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
-* {
+*, *::before {
   box-sizing: border-box;
 }
 
@@ -39,6 +39,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   font-size: 2rem;
   box-shadow: 0 15px 16px -16px #1a18;
   padding: 0.6rem;
+  white-space: pre-line;
 }
 
 
@@ -49,8 +50,8 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   font-size: 2rem;
   max-width: 100%;
   width: 50vh;
+  transition: transform .1s ease-out;
 }
-
 
 .language-button > div {
   display: flex;
@@ -60,25 +61,41 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   border-radius: 1rem;
   cursor: pointer;
   padding-left: 1rem;
+  transition: transform .1s ease-out;
+}
+
+.language-button > div:hover {
+  background: #fffe;
+}
+
+.language-button.selected  {
+  transform: scale(1.05);
+}
+
+.language-button.selected > div {
+  transform: translateY(-0.2rem);
 }
 
 .language-button > div > img {
   height: 2rem;
   border: thin solid #eeee;
+  cursor: pointer;
 }
 
 .language-button > div > .go {
-  background: #141;
-  color: white;
+  color: #888;
   align-self: stretch;
   padding: 1rem;
   border-radius: 0px 1rem 1rem 0px;
+  border-left: thin solid #888;
+  font-size: 1.5rem;
 }
 
 .language-button > div > .go-placeholder {
-  background: transparent;
-  color: white;
+  color: transparent;
   padding: 1rem;
+  border-left: thin solid transparent;
+  font-size: 1.5rem;
 }
 
 .border-text {
