--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 .border-text {
   /* text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, */
   /*              1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff; */
-  text-shadow: 0 0 5px white;
+  text-shadow: 0 0 8px white;
   -webkit-text-stroke: 1px white;
   -webkit-text-fill-color: black;
 }
@@ -133,6 +133,15 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   z-index: 2;
 }
 
+.full-square-bg {
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 25vmin 0 25vmin white, inset -25vmin 0 25vmin white, inset 0 25vmin 25vmin white, inset 0 -25vmin 25vmin white;
+}
 
 .full-square {
   margin: auto;
@@ -141,8 +150,6 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  background-size: 100% 100%;
-  box-shadow: inset 25vmin 0 25vmin white, inset -25vmin 0 25vmin white, inset 0 25vmin 25vmin white, inset 0 -25vmin 25vmin white;
 }
 
 .spell-letters {
